# autogen

autogen/: code_utils.py
autogen/agentchat/: conversable_agent.py
samples/apps/autogen-studio/autogenstudio/: workflowmanager.py
samples/apps/fireworks-studio/: .gitignore  MANIFEST.in  README.md  pyproject.toml
samples/apps/fireworks-studio/.virtual_documents/notebooks/: tutorial.ipynb
samples/apps/fireworks-studio/firestudio/: chatmanager.py  cli.py  datamodel.py  version.py  workflowmanager.py
samples/apps/fireworks-studio/firestudio/utils/: dbdefaults.json  dbutils.py  utils.py
samples/apps/fireworks-studio/firestudio/web/: app.py
samples/apps/fireworks-studio/frontend/: package.json
samples/apps/fireworks-studio/frontend/src/components/: types.ts
samples/apps/fireworks-studio/frontend/src/components/views/builder/: workflow.tsx
samples/apps/fireworks-studio/frontend/src/hooks/: provider.tsx
samples/apps/fireworks-studio/notebooks/: agent_spec.json  multi_agent_spec.json  multi_agent_tutorial.ipynb  tutorial.ipynb
